--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,33 @@ version: "3.9"
 services:
   frontend:
     build: ./PersonalBlogFrontend
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
+    environment:
+      - VITE_API_BASE_URL=/api
+    networks:
+      - app-network
 
   backend:
     build: ./PersonalBlogBackend
-    ports:
-      - "5000:5000"
     environment:
       - NOTION_TOKEN=${NOTION_TOKEN}
       - NOTION_DATABASE_ID=${NOTION_DATABASE_ID}
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      # - "443:443" # For future SSL
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      # - ./ssl:/etc/nginx/ssl # For future SSL certificates
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
