--- a/nginx.conf
+++ b/nginx.conf
@@ -6,25 +6,41 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    upstream frontend {
+        server frontend:3000;
+    }
+
+    upstream backend {
+        server backend:5000;
+    }
+
     server {
         listen 80;
         server_name localhost;
 
-        # Frontend - serve static files
+        # Frontend React app
         location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html;
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
         # Backend API
         location /api {
-            rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://localhost:5000;
+            rewrite ^/api/(.*) /$1 break;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
     }
 }
