working locally again

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,13 @@ services:
     depends_on:
       - frontend
       - backend
+    command: ["nginx", "-g", "daemon off;"]
     networks:
       - app-network
 
 networks:
   app-network:
     driver: bridge
+
+# to build and run the containers, use:
+# docker-compose up --build
