--- a/render.nginx.conf
+++ b/render.nginx.conf
@@ -19,7 +19,7 @@ http {
 
         # Backend API
         location /api {
-            # rewrite ^/api/(.*)$ /$1 break;
+            rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://localhost:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
