--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,9 @@ services:
         sync: false  # Set manually in Render dashboard
       - key: NOTION_DATABASE_ID
         sync: false
+      - key: VITE_API_BASE_URL
+        value: /api
+        sync: false  # Set manually in Render dashboard
     envVarsFromFile: false
     region: oregon
     ports:
