--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   frontend:
     build: ./PersonalBlogFrontend
     environment:
-      - VITE_API_BASE_URL=/api
+      - VITE_API_BASE_URL=${VITE_API_BASE_URL}
     networks:
       - app-network
 
